1st review bug-fix_text_align

--- a/styles/style.css
+++ b/styles/style.css
@@ -112,7 +112,8 @@
 }
 
 .aligned-text_center {
-  padding-left: 286px;
+  padding-right: 59px;
+  text-align: center;
 }
 
 .aligned-text_right {
